--- a/src/app/add-todo/add-todo.component.html
+++ b/src/app/add-todo/add-todo.component.html
@@ -3,7 +3,7 @@
   Name: <input name="task" [(ngModel)]="todo.task">
   <br><br>
   
-  <button type="submit" [disabled]="!todoForm.form.valid">Submit</button>
+  <button type="submit" [disabled]="!todoForm.form.valid">Add</button>
 
 </form>
 
